# bin-chicken

./: .gitignore  Cargo.toml  Dockerfile
.github/actions/: docker.yml
.github/workflows/: docker.yml
src/: configuration.rs  database.rs  main.rs  route.rs
src/database/: version-1.sql  version-2.sql
src/route/: api.rs
src/route/api/: repositories.rs
