[package]
name = "bin-chicken"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version =  "1", features = ["macros", "rt-multi-thread"] }
yaml_serde = "0.10"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3.23"
clap-verbosity-flag = { version = "3", default-features = false, features = [ "tracing" ] }
serde = { version = "1.0.228", features = ["derive"] }