[package]
name = "bin-chicken"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["default", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-std", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
yaml_serde = "0.10"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3.23"
clap-verbosity-flag = { version = "3", default-features = false, features = ["tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
futures-util = "0.3"
tokio-rusqlite = { version = "0.7", features = ["default", "bundled"] }
axum-range = "1"
axum-extra = { version = "0.12", features = ["typed-header"] }
minisign-verify = "0.2"
base64 = "0.22"
octocrab = "0.49"